--- a/add.yml
+++ b/add.yml
@@ -1,10 +1,10 @@
 ---
 # 
-#- name: system requirements nodes to be added
-#  hosts: add
-#  remote_user: root
-#  roles:
-#  - { role: nodes, tags: ["add"] }
+- name: system requirements nodes to be added
+  hosts: add
+  remote_user: root
+  roles:
+  - { role: nodes, tags: ["add"] }
 
 # add node
 - name: add agents
