--- a/roles/nodes/handlers/main.yml
+++ b/roles/nodes/handlers/main.yml
@@ -5,3 +5,11 @@
   async: 0
   poll: 0
   ignore_errors: true
+- name: restart machine
+  shell: sleep 2 && shutdown -r now "Ansible updates triggered"
+  async: 1
+  poll: 0
+  ignore_errors: true
+- name: waiting for server to come back
+  local_action: wait_for host={{ inventory_hostname }} state=started delay=60 timeout=180
+
